ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  rules:
    - host: jenkins.byondlabs.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
